--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,6 @@
-server.port=7070
+server.port=8787
 
 oauth.server=https://platform.ringcentral.com
-oauth.redirect.url=https://${SERVER_HOST}/botman-oauth
+oauth.redirect.url=https://${SERVER_HOST}/oauth
 oauth.client.id=${OAUTH_CLIENT_ID}
 oauth.client.secret=${OAUTH_CLIENT_SECRET}
-
-platform.api.version=v1.0
-
-user.email=terry.huang@ringcentral.com
